<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- 密码标签 -->

    <TextView
        android:id="@+id/passwd_label"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/passwd_label"
        android:textSize="20sp" />
    <!-- 密码输入框，留空表示不加密 -->

    <EditText
        android:id="@+id/editText_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/passwd_label"
        android:layout_toRightOf="@id/passwd_label"
        android:hint="@string/editText_passwd_hint"
        android:inputType="textPassword"
        android:textSize="18sp" />
    <!-- 使用自动密码 -->

    <Button
        android:id="@+id/btn_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_passwd"
        android:layout_marginLeft="30dp"
        android:text="@string/btn_auto" />
    <!-- 确定按钮 -->

    <Button
        android:id="@+id/btn_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_auto"
        android:layout_alignBottom="@+id/btn_auto"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_positive" />
    <!-- 重置按钮 -->

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_positive"
        android:layout_alignBottom="@+id/btn_positive"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/btn_reset" />

</RelativeLayout>